--- a/stylus/atoms/_select.styl
+++ b/stylus/atoms/_select.styl
@@ -14,11 +14,14 @@
               background-color:   var(--realse)
               border 0
               appearance none
-              span:not(.original)
-                     transform-origin: top left
-                     transform: translate(aura*0.5, aura * -1);
+              
        .select-group
               position relative
               margin aura 0
               label:not(.original)
                      top aura * -1
+              span:not(.original)
+                     transform-origin: top left
+                     transform: translate(aura*0.5, aura * 2);
+                     bottom 0
+                     position: absolute
